Avoid weird product image cropping

--- a/styles.less
+++ b/styles.less
@@ -112,3 +112,10 @@
   color: #ffffff;
   padding: 1rem;
 }
+
+.ProductItem-gallery-slides-item-image {
+  /**
+   * Disables weird cropping
+   */
+  height: auto !important;
+}
